# pka_calculator

./: .gitignore  .gitignore.swp  README.md  pyproject.toml
examples/: experimental_pka.csv
examples/molecules/: acetic.xyz  formic.xyz
examples/solution /: experimental_pka.csv
examples/solution /analysis/: gh_basis.csv  gh_results_basis.tex
examples/solution /data/: pka_basis.csv  pka_results_basis.tex  results_basis.csv  results_basis.tex
examples/solution /mycalculations/: calculations_summary.csv
examples/solution /mycalculations/def2-SVP/acetic/deprotonated/HF/: input.cpcm  input.densities  input.engrad  input.gbw  input.hess  input.opt  input.xyz  input_property.txt  input_trj.xyz  molecule.xyz  output.out
examples/solution /mycalculations/def2-SVP/acetic/neutral/HF/: input.cpcm  input.densities  input.engrad  input.gbw  input.hess  input.inp  input.opt  input.xyz  input_property.txt  input_trj.xyz  output.out
examples/solution /mycalculations/def2-SVP/formic/deprotonated/HF/: input.cpcm  input.densities  input.engrad  input.gbw  input.hess  input.inp  input.opt  input.xyz  input_property.txt  input_trj.xyz  molecule.xyz  output.out
pka_calculator/: .out.txt.swp  __init__.py  analyzer.py  calculator.py  cli.py  deprotonator.py  equilibrator.py  interactive.py  min_pka.py  monitor.py  processor.py  visualizer.py
pka_calculator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pka_calculator/.ipynb_checkpoints/: __init__-checkpoint.py  cli-checkpoint.py  monitor-checkpoint.py  processor-checkpoint.py  visualizer-checkpoint.py
(+10 files in other folders)
